# cpp-examples

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
.vscode-example/: settings.json
sources/: 01-01-hello-world.cpp  01-02-for.cpp  01-03-foreach-items.cpp  01-condition-ternaire.cpp  01-do-while.cpp  01-domain-of-validity-of-a-variable.cpp  01-for-array.cpp  01-for_each.cpp  01-if.cpp  01-inc.cpp  01-static_cast.cpp  01-switch.cpp  01-ternary_condition.cpp  01-types-de-donnees-native.cpp  01-variable-declaration.cpp  01-while.cpp  02-binary-operation.cpp  02-function-index.cpp  02-function-overload.cpp  02-function-pass-by-pointer.cpp  02-function-pass-by-reference.cpp  02-function-pass-by-value.cpp  02-function-pass-to-parameter.cpp  02-function-variadic.cpp  02-preprocessor.cpp  02-procedure.cpp  03-01-data-structure-structure.cpp  03-02-data-structure-enum.cpp  03-assert.cpp  03-data-structure-map.cpp  03-data-structure-pair.cpp  03-data-structure-stack.cpp  03-data-structure-string.cpp  03-data-structure-structure-cmp.cpp  03-data-structure-structure.cpp  03-data-structure-tableau1d.cpp  03-data-structure-tuple.cpp  03-data-structure-unordered_set.cpp  03-data-structure-vector.cpp  03-data-structure-with-class.cpp  (+42 more)
